--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
   <title>
-    Giftos
+    Hundred Shades Of Coco
   </title>
 
   <!-- slider stylesheet -->
@@ -36,13 +36,13 @@
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
           <span>
-            Giftos
+            Hundred Shades Of Coco
           </span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class=""></span>
         </button>
-
+<!--
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav  ">
             <li class="nav-item active">
@@ -82,7 +82,7 @@
                 <i class="fa fa-search" aria-hidden="true"></i>
               </button>
             </form>
-          </div>
+          </div>-->
         </div>
       </nav>
     </header>
